# SWE-PPM

./: .nvimrc  0001-hardcoded-last-cpus-for-pinning-of-communication-thr.patch  BuildChameleon.cmake  BuildCharm.cmake  BuildDefault.cmake  BuildHpx.cmake  BuildMpi.cmake  BuildMpiOverdecomp.cmake  BuildMpiOverdecompTasking.cmake  BuildUpcxx.cmake  CMakeLists.txt  FindNetCDF.cmake  FindUPCXX.cmake  Makefile  README.md  SConstruct  Structure.cmake  charmrun  cmake_install.cmake  tags
jobs/: init.sh  lts1_8192_8192_20.cmd  lts1_8192_8192_20_1.cmd  lts1_8192_8192_20_16.cmd  lts1_8192_8192_20_2.cmd  lts1_8192_8192_20_32nodes.cmd  lts1_8192_8192_20_4.cmd  lts1_8192_8192_20_8.cmd
jobs/chameleon_jobs/: lts1_8192_8192_20_1.cmd  lts1_8192_8192_20_16.cmd  lts1_8192_8192_20_2.cmd  lts1_8192_8192_20_32nodes.cmd  lts1_8192_8192_20_4.cmd  lts1_8192_8192_20_8.cmd
jobs/charmpp_jobs/: charmrun.47164  charmrun.47527  charmrun.47888  charmrun.48251  lts1_8192_8192_20_1.cmd  lts1_8192_8192_20_16.cmd  lts1_8192_8192_20_2.cmd  lts1_8192_8192_20_32nodes.cmd  lts1_8192_8192_20_4.cmd  lts1_8192_8192_20_8.cmd  lts1_8192_8192_2_4nodes_charevariants.cmd
jobs/cm2_jobs/: charm_migration_counter.cmd  gts1_2048_2048_80.cmd  gts1_4096_4096_20.cmd  gts1_8192_8192_20.cmd  gts1_8192_8192_20_big.cmd  gts1_charm_8192.cmd  gts2_8192_8192_20.cmd  gts2_charm_8192.cmd  gts3_8192_8192_20.cmd  gts_2048_2048_80.cmd  gts_8192_8192_20_big.cmd  lts1_2048_2048_80.cmd  lts1_4096_4096_20.cmd  lts1_8192_8192_20_big.cmd  lts1_8192_8192_20_small.cmd  lts1_charm_8192.cmd  lts_2048_2048_80.cmd  lts_4096_4096_20.cmd  lts_8192_8192_20.cmd  multi_node_weak_scaling.cmd  multi_node_weak_scaling_gcc.cmd  multi_node_ws.cmd  upcxx_all.cmd
jobs/martin_jobs/: gts1_8192_8192_20_small.cmd  gts_4096_4096_20.cmd  gts_8192_8192_20.cmd  gts_charm_8192.cmd  lts1_8192_8192_20.cmd  lts2_8192_8192_20.cmd  lts2_8192_8192_20_small.cmd  lts2_charm_8192.cmd  lts3_8192_8192_20.cmd  lts3_charm_8192.cmd  lts_8192_8192_20_big.cmd  lts_charm_8192.cmd
jobs/mpi_overdecomp_jobs/: lts1_8192_8192_20_1.cmd  lts1_8192_8192_20_16.cmd  lts1_8192_8192_20_2.cmd  lts1_8192_8192_20_32nodes.cmd  lts1_8192_8192_20_4.cmd  lts1_8192_8192_20_8.cmd
jobs/mpi_overdecomp_jobs_tasking/: lts1_8192_8192_20_32nodes.cmd  lts1_8192_8192_20_4.cmd  lts1_8192_8192_20_8.cmd
output/: test.0.vts  test.1.vts  test.2.vts  test.3.vts  test.4.vts  test.5.vts
src/: ActorDistributor.cpp  ActorDistributor.hpp  Constants.hh  MetisActorDistributor.cpp  MetisActorDistributor.hpp  SConscript  SimpleActorDistributor.cpp  SimpleActorDistributor.hpp
src/blocks/: SWE_Block.hh  SWE_Block_common.cpp  SWE_Block_common.hh  SWE_DimensionalSplitting.cpp  SWE_DimensionalSplitting.hh  SWE_DimensionalSplittingChameleon.cpp  SWE_DimensionalSplittingChameleon.hh  SWE_DimensionalSplittingCharm.ci  SWE_DimensionalSplittingCharm.cpp  SWE_DimensionalSplittingCharm.decl.h  SWE_DimensionalSplittingCharm.def.h  SWE_DimensionalSplittingCharm.hh  SWE_DimensionalSplittingComponent.cpp  SWE_DimensionalSplittingComponent.hpp  SWE_DimensionalSplittingHpx.cpp  SWE_DimensionalSplittingHpx.hh  SWE_DimensionalSplittingMPIOverdecomp.cpp  SWE_DimensionalSplittingMPIOverdecomp.hh  SWE_DimensionalSplittingMpi.cpp  SWE_DimensionalSplittingMpi.hh  SWE_DimensionalSplittingUpcxx.cpp  SWE_DimensionalSplittingUpcxx.hh  SWE_Hpx_Component.cpp  SWE_Hpx_Component.hpp  SWE_Hpx_No_Component.cpp  SWE_Hpx_No_Component.hpp  SWE_WaveAccumulationBlock.cpp  SWE_WaveAccumulationBlock.hh  SWE_WavePropagationBlock.cpp  SWE_WavePropagationBlock.hh  SWE_WavePropagationBlockSIMD.cpp  SWE_WavePropagationBlockSIMD.hh
src/blocks/cuda/: SWE_BlockCUDA.cu  SWE_BlockCUDA.hh  SWE_BlockCUDA_kernels.cu  SWE_BlockCUDA_kernels.hh  SWE_WavePropagationBlockCuda.cu  SWE_WavePropagationBlockCuda.hh  SWE_WavePropagationBlockCuda_kernels.cu  SWE_WavePropagationBlockCuda_kernels.hh
src/blocks/rusanov/: SWE_RusanovBlock.cpp  SWE_RusanovBlock.hh  SWE_RusanovBlockCUDA.cu  SWE_RusanovBlockCUDA.hh  SWE_RusanovBlockCUDA_kernels.cu  SWE_RusanovBlockCUDA_kernels.hh
src/examples/: netCdf_mpi.cpp  netCdf_simple.cpp  swe_chameleon.cpp  swe_chameleon_new.cpp  swe_charm.ci  swe_charm.cpp  swe_charm.decl.h  swe_charm.def.h  swe_charm.hh  swe_hpx.cpp  swe_mpi.cpp  swe_mpi_legacy.cpp  swe_mpi_overdecomp.cpp  swe_opengl.cpp  swe_simple.cpp  swe_upcxx.cpp
src/opengl/: vertex.glsl
src/scenarios/: SWE_AsagiScenario.hh  SWE_AsagiScenario_vis.hh  SWE_Scenario.hh  SWE_TsunamiScenario.hh  SWE_VisInfo.hh  SWE_simple_scenarios.hh  SWE_simple_scenarios_vis.hh
src/tools/: Collector.hpp  CollectorChameleon.hpp  CollectorCharm.hpp  CollectorHpx.hpp  CollectorMpi.hpp  CollectorUpcxx.hpp  Communicator.hpp  CounterUtility.hpp  Float1D.hh  Float2D.hh  Float2DBuffer.hh  Float2DBufferUpcxx.hh  Float2DNative.hh  Float2DUpcxx.hh  LocalityChannel.hpp  Logger.hh  ProgressBar.hh  args.hh  help.hh
src/types/: BlockConnectInterface.hh  Boundary.hh  SWE_Block1D.hh  SWE_Block1DUpcxx.hh
src/writer/: NetCdfWriter.cpp  NetCdfWriter.hh  VtkWriter.cpp  VtkWriter.hh  Writer.hh
